[package]
name = "assignment-1-public-tests"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assignment-1-solution = { path = "../solution" }
crossbeam-channel = "0.5"
uuid = { version = "0.8", features = ["v4"] }
tempfile = "3.1"
log = "*"

[dependencies.simple_logger]
version = "1.11"
default-features = false

[dev-dependencies]
ntest = "0.7"
env_logger = "*"

[[bin]]
name = "executors_main"
path = "executors_main.rs"

[[bin]]
name = "system_main"
path = "system_main.rs"

[lib]
name = "tests_lib"
path = "lib.rs"
