[package]
name = "assignment-1-solution"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# use exactly those main dependencies
[dependencies]
crossbeam-channel = "0.5"
uuid = { version = "0.8", features = ["v4"] }
log = { version = "0.4" }

[lib]
name = "assignment_1_solution"
path = "lib.rs"
